--- a/pages/getMyCard/getMyCard.wxml
+++ b/pages/getMyCard/getMyCard.wxml
@@ -28,10 +28,10 @@
     </view>
 </view>
 
-<view class="buy-input">
+<!-- <view class="buy-input">
     <view class="item-title">车辆品牌</view>
     <input type="text" value="{{postJosn.fullName}}" bindinput="bindCarNo" placeholder="请输入" />
-</view>
+</view> -->
 <view class="buy-input">
     <view class="item-title">收件人</view>
     <input type="text" value="{{postJosn.persoName}}" bindinput="bindPersoName" placeholder="请输入" />
