--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -110,7 +110,10 @@ page {
     padding: 0;
     margin: 0;
     background: none;
-    border: #FFFFFF
+    border: #FFFFFF;
+    width: 100%;
+    color: #333333;
+    text-align: left;
 }
 
 .button-view::after {
@@ -120,6 +123,7 @@ page {
 
 button[size=mini] {
     background: none;
+    color: #333333;
     padding: 0;
 }
 
