--- a/pages/nuoList/nuoList.wxss
+++ b/pages/nuoList/nuoList.wxss
@@ -1,25 +1,26 @@
 /* pages/nuoList/nuoList.wxss */
 
 page {
-  background-color:#355995;
+    background-color: #355995;
 }
 
 .scroll-view {
-  width: 100%;
-  height: 100%;
-  border-top: 1rpx solid #eeeeee;
-  background-color: #f7f6f6;
-  position: absolute;
-  top: 0;
-  left: 0;
+    width: 100%;
+    height: 100%;
+    border-top: 1rpx solid #eeeeee;
+    background-color: #f7f6f6;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.item-list {
-  
+.wetoast__bd {
+    min-width: 70%;
+    left: 50%;
 }
 
 .item {
-    height:150rpx;
+    height: 150rpx;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -48,20 +49,20 @@ page {
     border-bottom: 1rpx solid #eeeeee
 }
 
-.item-moddle-txt .mod-txt{
-  float:left;
+.item-moddle-txt .mod-txt {
+    float: left;
 }
 
-.item-moddle-txt .mod-code{
-  width:180rpx;
-  display:inline-block;
+.item-moddle-txt .mod-code {
+    width: 180rpx;
+    display: inline-block;
 }
 
-.item-moddle-txt .txt-red{
-  color:#fff;
-  margin-left:30rpx;
-  display: inline-block;
-  background-color:#f4160a;
+.item-moddle-txt .txt-red {
+    color: #fff;
+    margin-left: 30rpx;
+    display: inline-block;
+    background-color: #f4160a;
 }
 
 .item-right image {
