--- a/pages/testSancode/testSancode.wxml
+++ b/pages/testSancode/testSancode.wxml
@@ -4,7 +4,7 @@
 <view class="content">
     <view class="img">
         <view class="nuo-tit">挪车体验码</view>
-        <view class="nuo-grey">注：此二维码仅作为体验使用</view>
+        <view class="nuo-grey">注：此体验二维码24小时后过期</view>
         <image src="{{qr_code}}"></image>
     </view>
     <view class="text">
