--- a/pages/getMyCard/getMyCard.wxml
+++ b/pages/getMyCard/getMyCard.wxml
@@ -52,7 +52,7 @@
 <view class="btm">
     <view class="btm-text">注：收到挪车码后请您先扫描进行绑定车辆和手机信息，绑定后方可使用，如有疑问请查看<text bindtap="openFqa">常见问题</text></view>
     <view class="btm-btton">
-        <view class="left">服务费：{{totalPrices}}元</view>
+        <view class="left">年费：{{totalPrices}}元</view>
         <view class="right" bindtap="giveMyCard">立即申请</view>
     </view>
 </view>
