--- a/pages/billBoard/billBoard.wxml
+++ b/pages/billBoard/billBoard.wxml
@@ -5,19 +5,19 @@
     <view class="list">
         <view class="top">
             <view class="left">
-                <image class="icon" src="/images/phb_two.png"></image>
+                <image class="icon" src="{{ rank_list[1].avatarUrl}}"></image>
                 <view class="user-name">{{ rank_list[1].name }}</view>
                 <!-- <view class="user-card">{{ rank_list[1].car_brand }}</view> -->
                 <view class="user-pice">{{ rank_list[1].amount }}</view>
             </view>
             <view class="center">
-                <image class="icon" src="/images/phb_one.png"></image>
+                <image class="icon" src="{{ rank_list[0].avatarUrl}}"></image>
                 <view class="user-name">{{ rank_list[0].name }}</view>
                 <!-- <view class="user-card">{{ rank_list[0].car_brand }}</view> -->
                 <view class="user-pice">{{ rank_list[0].amount }}</view>
             </view>
             <view class="right">
-                <image class="icon" src="/images/phb_stree.png"></image>
+                <image class="icon" src="{{ rank_list[2].avatarUrl}}"></image>
                 <view class="user-name">{{ rank_list[2].name }}</view>
                 <!-- <view class="user-card">{{ rank_list[2].car_brand }}</view> -->
                 <view class="user-pice">{{ rank_list[2].amount }}</view>
