--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,7 +7,7 @@ page {
 .conter {
     width: 100%;
     height: 100%;
-    background-image: url(https://www.nuochewang.net/wximages/index_bg.png);
+    background-image: url(http://img.nuochewang.net/wximages/index_bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
