--- a/pages/carCode/carCode.wxss
+++ b/pages/carCode/carCode.wxss
@@ -7,7 +7,7 @@ page {
 .top {
     width: 100%;
     height: 30%;
-    background-image: url(https://www.nuochewang.net/wximages/next_bg.png);
+    background-image: url(http://img.nuochewang.net/wximages/next_bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
