--- a/pages/getMyCard/getMyCard.wxss
+++ b/pages/getMyCard/getMyCard.wxss
@@ -7,7 +7,7 @@ page {
 .top {
     width: 100%;
     height: 350rpx;
-    background-image: url(https://www.nuochewang.net/wximages/next_bg.png);
+    background-image: url(http://img.nuochewang.net/wximages/next_bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
