--- a/pages/invite/invite.wxss
+++ b/pages/invite/invite.wxss
@@ -4,7 +4,7 @@ page {
     width: 100%;
     height: 100%;
     background: rgb(45, 68, 134);
-    background-image: url(https://www.nuochewang.net/wximages/index_bg.png);
+    background-image: url(http://img.nuochewang.net/wximages/index_bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 20% 7.5rpx 0 7.5rpx;
@@ -14,7 +14,7 @@ page {
 .conter {
     width: 100%;
     height: 717rpx;
-    background-image: url(https://www.nuochewang.net/wximages/yqbg.png);
+    background-image: url(http://img.nuochewang.net/wximages/yqbg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     /* margin: 10% 2% 0 2%; */
