--- a/pages/nuoList/nuoList.wxml
+++ b/pages/nuoList/nuoList.wxml
@@ -5,13 +5,13 @@
     <view class="item-list">
         <view class="item" wx:for="{{dataList}}" wx:key="item">
             <view class="item-left">
-                <image src="{{item.url}}"></image>
+                <image src="{{item.url_1}}"></image>
             </view>
-            <view class="item-moddle" data-qr_code_id="{{item.id}}" data-tiyan="{{item.tiyan}}" data-qr_code="{{item.url}}" bindtap="e_online">
-                <view>
-                    <view class="item-moddle-txt">
+            <view class="item-moddle" data-qr_code_id="{{item.id}}" data-start_time="{{item.start_time}}" data-end_time="{{item.end_time}}" data-tiyan="{{item.tiyan}}" data-qr_code="{{item.url}}" bindtap="e_online">
+                <view style="width: 85%;">
+                    <view class="item-moddle-txt item-moddle-txt-top">
                         <view class="mod-code">{{item.car_no?item.car_no:'未绑定'}}</view>
-                        <view class="txt-red" wx:if="{{item.tiyan}}">体验码</view>
+                        <view class="txt-red">有效期至:{{ item.end_time }}</view>
                     </view>
                     <view class="item-moddle-txt">
                         <view class="mod-txt">绑定手机：</view>
@@ -19,7 +19,7 @@
                     </view>
 
                 </view>
-                <view class="item-right" wx:if="{{item.tiyan}}">
+                <view class="item-right">
                     <image src="/images/me_icon4.png"></image>
                 </view>
             </view>
