--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -47,7 +47,7 @@
         </view>
         <view class="item-right">
             <button type="default" open-type="contact" size="mini" class="button-view" hover-class="none">联系客服</button>
-            <!-- <image src="/images/me_icon4.png"></image> -->
+            <image src="/images/me_icon4.png"></image>
         </view>
     </view>
 </view>
