--- a/pages/testSancode/testSancode.wxml
+++ b/pages/testSancode/testSancode.wxml
@@ -5,7 +5,9 @@
     <view class="img">
         <view class="nuo-tit">挪车体验码</view>
         <view class="nuo-grey">注：此体验二维码24小时后过期</view>
-        <image src="{{qr_code}}"></image>
+        <view class="qrCodebj">
+            <image src="{{qr_code}}"></image>
+        </view>
     </view>
     <view class="text">
         <view class="text-grey">点击申请邮寄，您将收到一套精美的官司方挪车贴，请在收到挪车码后请按照说明书
